--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,6 +1,7 @@
 <!-- Author: Bila Galyna (bila.galyna@gmail.com) -->
 <html>
   <head>
+     <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
      <h1>Hello, World!</h1>
